<?xml version="1.0"?>
<package>
  <name>dynpick_ft_sensor</name>
  <version>0.0.0</version>
  <description>The dynpick_ft_sensor package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <export>
  </export>
</package>
