<?xml version="1.0"?>
<package>
  <name>dynpick_offset_test</name>
  <version>0.0.0</version>
  <description>The dynpick_offset_test package</description>
  <license>BSD</license>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="sch@robotis.com">SCH</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>cmake_modules</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <export></export>
</package>
