<?xml version="1.0"?>
<package format="2">
  <name>thormang3_imu_3dm_gx4</name>
  <version>0.1.3</version>
  <description>
    Driver for Microstrain 3DM-GX4-25 IMU
    This package is modified by robotis.
    The original version is Kumar Robotics's imu_3dm_gx4 package.
  </description>
  <license>Apache 2</license>
  <author>Gareth Cross</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC</url>
  <url type="website">http://wiki.ros.org/thormang3_imu_3dm_gx4</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
</package>
