<?xml version="1.0"?>
<package format="2">
  <name>thormang3_imu_3dm_gx4</name>
  <version>0.2.0</version>
  <description>
    Driver for Microstrain 3DM-GX4-25 IMU
    This package is modified by robotis.
    The original version is Kumar Robotics's imu_3dm_gx4 package.
  </description>
  <license>Apache 2.0</license>
  <author>Gareth Cross</author>
  <author email="sch@robotis.com">SCH</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_imu_3dm_gx4</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC-SENSORs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC-SENSORs/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_updater</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>boost</depend>
</package>
