<?xml version="1.0"?>
<package format="2">
  <name>thormang3_mpc_sensors</name>
  <version>0.2.0</version>
  <description>
    ROS packages for the thormang3_mpc_sensors (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="sch@robotis.com">SCH</author>
  <author>Gareth Cross</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_mpc_sensors</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC-SENSORs</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-MPC-SENSORs/issues</url>  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>thormang3_imu_3dm_gx4</exec_depend>
  <export><metapackage/></export>
</package>
